# ultraTodo

./: check.org
nativeClient/: nativeClient.html  nativeClient.js
todoApi/: stack.yaml  todoApi.cabal
todoApi/src/Todo/: Api.hs
todoApi/src/Todo/Api/: Types.hs
todoClient/: .gitignore  Makefile  README.md  stack.yaml  todoClient.cabal
todoClient/app/: Main.hs
todoClient/html/: todoClient.html
todoClient/src/React/Plugins/: ReactSelect.hs
todoClient/src/Todo/: Store.hs  Utils.hs  View.hs
todoServer/: stack.yaml  todoServer.cabal
todoServer/app/: Main.hs
todoServer/src/Todo/: Server.hs
todoServer/src/Todo/Server/: Impl.hs
