name:                todoApi
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/todoApi#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options: -Wall
  default-extensions: DataKinds
                    , DeriveGeneric
                    , TemplateHaskell
                    , TypeFamilies
                    , TypeOperators
  exposed-modules:     Todo.Api
                     , Todo.Api.Types
                     , Todo.Utils
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , deepseq
                     , inflections
                     , lens
                     , servant
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/todoApi
